[gd_scene load_steps=3 format=2]

[ext_resource path="res://Fighter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=3]

[node name="Enemy" groups=[
"enemies",
] instance=ExtResource( 1 )]
z_index = 0
collision_layer = 1024
collision_mask = 1025
script = ExtResource( 3 )
max_speed = 250
max_combo_index = 2

[node name="Body Collider" parent="." index="0" groups=[
"enemies",
]]
position = Vector2( 5, 40 )

[node name="Sprite" parent="." index="1" groups=[
"enemies",
]]
hframes = 33
frame = 19

[node name="blast_spawn" parent="Sprite" index="0" groups=[
"enemies",
]]

[node name="HitBox" parent="Sprite" index="1" groups=[
"enemies",
]]
collision_layer = 2048
collision_mask = 20

[node name="HitBoxCol" parent="Sprite/HitBox" index="0" groups=[
"enemies",
]]

[node name="HitCol" parent="Sprite" index="2" groups=[
"enemies",
]]
collision_layer = 4096
collision_mask = 2

[node name="HitCollider" parent="Sprite/HitCol" index="0" groups=[
"enemies",
]]
position = Vector2( 30, -10 )
disabled = true

[node name="InRangeCol" parent="Sprite" index="3" groups=[
"enemies",
]]
collision_layer = 8192
collision_mask = 1025

[node name="InRangeCollider" parent="Sprite/InRangeCol" index="0" groups=[
"enemies",
]]
position = Vector2( -40, 10 )
disabled = true

[node name="ChargeRangeCol" type="Area2D" parent="Sprite" index="4" groups=[
"enemies",
]]
visible = false
collision_layer = 65536
collision_mask = 1025

[node name="ChargeRangeCollider" type="CollisionShape2D" parent="Sprite/ChargeRangeCol" index="0" groups=[
"enemies",
]]

[node name="GrappleCol" parent="Sprite" index="5" groups=[
"enemies",
]]
visible = false
collision_layer = 16384
collision_mask = 2

[node name="GrappleCollider" parent="Sprite/GrappleCol" index="0" groups=[
"enemies",
]]
position = Vector2( 35, 0 )
disabled = true

[node name="anim" type="AnimationPlayer" parent="." index="2" groups=[
"enemies",
]]

[node name="Detector" type="Area2D" parent="." index="3" groups=[
"enemies",
]]
collision_layer = 32768
collision_mask = 1025

[node name="DetectRadius" type="CollisionShape2D" parent="Detector" index="0" groups=[
"enemies",
]]

[node name="Shadow" parent="." index="4" groups=[
"enemies",
]]
position = Vector2( 15, 75 )
scale = Vector2( 2, 1 )

[node name="Overlay" parent="." index="5" groups=[
"enemies",
]]
visible = false
z_index = 3
hframes = 33
frame = 31
[connection signal="body_entered" from="Sprite/InRangeCol" to="." method="_on_InRangeCol_body_entered"]
[connection signal="body_exited" from="Sprite/InRangeCol" to="." method="_on_InRangeCol_body_exited"]
[connection signal="body_entered" from="Sprite/ChargeRangeCol" to="." method="_on_ChargeRangeCol_body_entered"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_Detector_body_exited"]
